<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>CPlotOptions</class>
 <widget class="QDialog" name="CPlotOptions">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>304</width>
    <height>300</height>
   </rect>
  </property>
  <property name="sizePolicy">
   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
    <horstretch>0</horstretch>
    <verstretch>0</verstretch>
   </sizepolicy>
  </property>
  <property name="windowTitle">
   <string>Plot Options</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout_2">
   <property name="spacing">
    <number>2</number>
   </property>
   <property name="sizeConstraint">
    <enum>QLayout::SetFixedSize</enum>
   </property>
   <property name="leftMargin">
    <number>2</number>
   </property>
   <property name="topMargin">
    <number>2</number>
   </property>
   <property name="rightMargin">
    <number>2</number>
   </property>
   <item>
    <widget class="QTabWidget" name="optionsTab">
     <property name="currentIndex">
      <number>0</number>
     </property>
     <widget class="QWidget" name="General">
      <attribute name="title">
       <string>General</string>
      </attribute>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
        <widget class="QGroupBox" name="yScaleBox">
         <property name="title">
          <string>Y-Scale Type</string>
         </property>
         <layout class="QHBoxLayout" name="horizontalLayout">
          <item>
           <widget class="QRadioButton" name="yLinearBtn">
            <property name="text">
             <string>Linear</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QRadioButton" name="yLogBtn">
            <property name="text">
             <string>Log</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QRadioButton" name="yDBBtn">
            <property name="text">
             <string>dB</string>
            </property>
           </widget>
          </item>
         </layout>
        </widget>
       </item>
       <item>
        <widget class="QGroupBox" name="xScaleBox">
         <property name="title">
          <string>X-Scale Type</string>
         </property>
         <layout class="QHBoxLayout" name="horizontalLayout_2">
          <item>
           <widget class="QRadioButton" name="xLinearBtn">
            <property name="text">
             <string>Linear</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QRadioButton" name="xLogBtn">
            <property name="text">
             <string>Log</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QRadioButton" name="xDBBtn">
            <property name="text">
             <string>dB</string>
            </property>
           </widget>
          </item>
         </layout>
        </widget>
       </item>
       <item>
        <widget class="QCheckBox" name="gridBox">
         <property name="text">
          <string>Display Grid</string>
         </property>
        </widget>
       </item>
      </layout>
     </widget>
     <widget class="QWidget" name="Font">
      <attribute name="title">
       <string>Font size</string>
      </attribute>
      <layout class="QVBoxLayout" name="verticalLayout_3">
       <item>
        <widget class="QGroupBox" name="fontAxisGroup">
         <property name="title">
          <string>Axis</string>
         </property>
         <layout class="QGridLayout" name="gridLayout">
          <property name="leftMargin">
           <number>9</number>
          </property>
          <property name="topMargin">
           <number>9</number>
          </property>
          <property name="rightMargin">
           <number>9</number>
          </property>
          <property name="bottomMargin">
           <number>9</number>
          </property>
          <property name="spacing">
           <number>9</number>
          </property>
          <item row="1" column="1">
           <widget class="QRadioButton" name="autoAxisFontBtn">
            <property name="text">
             <string>Auto</string>
            </property>
            <property name="checked">
             <bool>true</bool>
            </property>
           </widget>
          </item>
          <item row="0" column="2">
           <widget class="QComboBox" name="fontPointCombo">
            <property name="enabled">
             <bool>true</bool>
            </property>
            <property name="currentIndex">
             <number>2</number>
            </property>
            <item>
             <property name="text">
              <string>7</string>
             </property>
            </item>
            <item>
             <property name="text">
              <string>8</string>
             </property>
            </item>
            <item>
             <property name="text">
              <string>9</string>
             </property>
            </item>
            <item>
             <property name="text">
              <string>10</string>
             </property>
            </item>
            <item>
             <property name="text">
              <string>11</string>
             </property>
            </item>
            <item>
             <property name="text">
              <string>12</string>
             </property>
            </item>
            <item>
             <property name="text">
              <string>14</string>
             </property>
            </item>
           </widget>
          </item>
          <item row="0" column="1">
           <widget class="QRadioButton" name="fixedAxisFontRBtn">
            <property name="text">
             <string>Fixed</string>
            </property>
           </widget>
          </item>
          <item row="0" column="3">
           <widget class="QLabel" name="label">
            <property name="text">
             <string>pix</string>
            </property>
           </widget>
          </item>
         </layout>
        </widget>
       </item>
       <item>
        <widget class="QGroupBox" name="legendGroup">
         <property name="title">
          <string>Legend</string>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_4">
          <item>
           <widget class="QRadioButton" name="toAxisFontBtn">
            <property name="text">
             <string>Equal to axis</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QRadioButton" name="autoLgdFontBtn">
            <property name="text">
             <string>Auto</string>
            </property>
            <property name="checked">
             <bool>true</bool>
            </property>
           </widget>
          </item>
         </layout>
        </widget>
       </item>
      </layout>
     </widget>
     <widget class="QWidget" name="Lines">
      <attribute name="title">
       <string>Plot type</string>
      </attribute>
      <layout class="QVBoxLayout" name="verticalLayout_5">
       <item>
        <widget class="QGroupBox" name="generalGroup">
         <property name="title">
          <string>General</string>
         </property>
         <layout class="QHBoxLayout" name="horizontalLayout_3">
          <item>
           <widget class="QRadioButton" name="linesTypeBtn">
            <property name="text">
             <string>Use lines</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QRadioButton" name="dotsTypeBtn">
            <property name="text">
             <string>Only dots</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QRadioButton" name="barsTypeBtn">
            <property name="text">
             <string>Bars</string>
            </property>
           </widget>
          </item>
         </layout>
        </widget>
       </item>
       <item>
        <widget class="QGroupBox" name="lineWidthGroup">
         <property name="title">
          <string>Pen width</string>
         </property>
         <layout class="QHBoxLayout" name="horizontalLayout_4">
          <item>
           <widget class="QRadioButton" name="widthAutoBtn">
            <property name="text">
             <string>auto</string>
            </property>
            <property name="checked">
             <bool>true</bool>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QRadioButton" name="widthThinBtn">
            <property name="text">
             <string>thin</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QRadioButton" name="widthThickBtn">
            <property name="text">
             <string>thick</string>
            </property>
           </widget>
          </item>
         </layout>
        </widget>
       </item>
       <item>
        <widget class="QGroupBox" name="pointTypeGroup">
         <property name="enabled">
          <bool>false</bool>
         </property>
         <property name="title">
          <string>Type of dots</string>
         </property>
         <layout class="QHBoxLayout" name="horizontalLayout_5">
          <item>
           <widget class="QRadioButton" name="pointPixelBtn">
            <property name="text">
             <string>pixel</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QRadioButton" name="pointSquareBtn">
            <property name="text">
             <string>square</string>
            </property>
            <property name="checked">
             <bool>true</bool>
            </property>
           </widget>
          </item>
         </layout>
        </widget>
       </item>
      </layout>
     </widget>
    </widget>
   </item>
   <item>
    <widget class="QDialogButtonBox" name="buttonBox">
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="standardButtons">
      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
